out.log

> users@1.0.0 dev /Users/charles.crawford/tmp/graphql/udemy-course/users
> nodemon server.js

[33m[nodemon] 1.11.0[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching: *.*[39m
[32m[nodemon] starting `node server.js`[39m
/Users/charles.crawford/tmp/graphql/udemy-course/users/schema/schema.js:34
        return axios.get('http://localhost:3000/companies/{parentValue.companyId}`)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Invalid or unexpected token
    at createScript (vm.js:53:10)
    at Object.runInThisContext (vm.js:95:10)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/Users/charles.crawford/tmp/graphql/udemy-course/users/server.js:3:14)
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
